# move-ugc-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
0.2.0/: 404.html  index.html
0.2.2/: 404.html  index.html
0.2.3/search/: search_index.json
0.2.4/: 404.html  index.html
0.2.4/search/: search_index.json
0.2.5/: index.html
0.2.5/search/: search_index.json
0.3.0/contributing/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  objects.inv
0.4.0/: 404.html  index.html  objects.inv
0.4.0/contributing/: index.html
0.4.0/search/: search_index.json
0.5.0/: index.html  objects.inv
0.5.0/contributing/: index.html
0.5.0/search/: search_index.json
0.5.1/search/: search_index.json
0.5.3/: 404.html
0.6.1/search/: search_index.json
0.6.2/: 404.html  index.html  objects.inv
0.6.2/contributing/: index.html
0.6.2/search/: search_index.json
0.6.2/theme/: announce.html
0.7.0/: index.html
0.7.10/: index.html  objects.inv
0.7.12/: 404.html
0.7.7/: 404.html  index.html
0.7.7/contributing/: index.html
0.7.9/: 404.html  index.html
0.8.0/: 404.html  index.html
0.8.1/: 404.html
0.8.2/: index.html  objects.inv
0.8.3/: 404.html  index.html  objects.inv
0.8.4/: 404.html  index.html  objects.inv
0.9.2/: objects.inv
1.0.0/: objects.inv
1.1.0/: 404.html  index.html
1.10.0/: objects.inv
1.13.0/: index.html
1.2.1/: 404.html  index.html  objects.inv
1.4.1/: 404.html  index.html
1.6.0/: objects.inv
1.8.0/: 404.html  index.html  objects.inv
2.0.0/: 404.html  objects.inv
3.0.0/: objects.inv
3.1.1/: 404.html  index.html
3.1.2/: 404.html  index.html
3.2.0/: objects.inv
3.3.1/: 404.html
4.0.0/: index.html
docs/: contributing.md  index.md
latest/: 404.html  index.html
move_ugc/: __init__.py  placeholder.py  settings.py  ugc_client.py
tests/: __init__.py  conftest.py  constants.py  test_client.py  test_placeholder.py
(+584 files in other folders)
