[tool.poetry]
name = "move-ugc-python"
version = "0.1.0"
description = ""
authors = ["Move.ai"]
readme = "README.md"
packages = [{include = "move_ugc"}, {include = "move_ugc/py.typed"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
snapshottest = "^0.6.0"
Faker = "^17.6.0"
pytest-freezegun = "^0.4.2"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
mypy = "^1.4.1"
wemake-python-styleguide = "^0.18.0"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = "^0.22.0"
mkdocs-material = "^9.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
