[tool.poetry]
name = "move-ugc-python"
version = "1.4.0"
description = ""
authors = ["Move.ai"]
readme = "README.md"
packages = [{include = "move_ugc"}, {include = "move_ugc/py.typed"}]

[tool.poetry.dependencies]
python = "^3.8.1"
gql = {extras = ["requests"], version = "^3.4.1"}
pydantic-settings = "^2.2.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
snapshottest = "^0.6.0"
Faker = ">=18.13,<31.0"
pytest-freezegun = "^0.4.2"
pre-commit = "^3.3.3"
wemake-python-styleguide = "^0.18.0"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.13.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocs-material = "^9.5.38"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts="--cov-report html --cov . -vvv --randomly-seed=3694812 --junitxml=reports/junit/junit.xml --cov-report=xml:reports/coverage/coverage.xml --cov-fail-under=100"

[tool.coverage.run]
omit=["tests/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = false
